[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bluetooth-mesh"
version = "0.9.1"
readme = "README.rst"
authors = [
    { name = "Michał Lowas-Rzechonek", email = "michal.lowas-rzechonek@silvair.com" },
    { name = "Amadeusz Herzog", email = "amadeusz.hercog@silvair.com" },
    { name = "Jakub Witowski", email = "jakub.witowski@silvair.com" },
    { name = "Kamil Janowski", email = "kamil.janowski@silvair.com" },
    { name = "Przemysław Fierek", email = "przemyslaw.fierek@silvair.com" },
    { name = "Rafał Gajda", email = "rafal.gajda@silvair.com" }
]
dependencies = [
    "bluetooth-mesh-messages>=0.9",
    "bluetooth-mesh-network>=0.9",
]
classifiers = [
    "Development Status :: 2 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: System :: Networking",
]

[project.optional-dependencies]
bluez = [
    "bluetooth-mesh-bluez>=0.9.1",
]
